cmake_minimum_required(VERSION 3.14)

set(PROJECT_NAME toy_tunnel)

project(${PROJECT_NAME})

#set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 11)

if(CMAKE_SYSTEM_NAME MATCHES "Emscripten")
	set(EMSCRIPTEN TRUE)
endif()

# Make sure all binaries are placed into the same build folder.
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

# Add modules directory
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/modules")

# Optional: Enable Python support
option(ENABLE_PYTHON "Enable Python support" OFF)
if(ENABLE_PYTHON)
    include(FetchPython)
endif()

# Optional: Enable Vulkan support
option(ENABLE_VULKAN "Enable Vulkan rendering" OFF)
if(ENABLE_VULKAN)
    include(FetchVulkan)
    if(VULKAN_FOUND)
        target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
    endif()
endif()

# Link your project against CF statically, rather than as a shared library.
set(CUTE_FRAMEWORK_STATIC ON)
set(CF_FRAMEWORK_BUILD_SAMPLES OFF)


# This will download and build Cute Framework just once the first time you build your game.
include(FetchContent)
FetchContent_Declare(
	cute
	GIT_REPOSITORY https://github.com/RandyGaul/cute_framework
	GIT_TAG 403cbc88c4056f99b762cdfab77f7a05d6adb2ef)
FetchContent_MakeAvailable(cute)

# Create symbolic link to data directory for non-Windows platforms
if(NOT WIN32)
	set(DATA_LINK_PATH ${CMAKE_BINARY_DIR}/data)
	set(DATA_SOURCE_PATH ${CMAKE_SOURCE_DIR}/data)
	
	# Create symbolic link if it doesn't exist
	if(NOT EXISTS ${DATA_LINK_PATH})
		execute_process(
			COMMAND ${CMAKE_COMMAND} -E create_symlink ${DATA_SOURCE_PATH} ${DATA_LINK_PATH}
			RESULT_VARIABLE SYMLINK_RESULT
		)
		if(NOT SYMLINK_RESULT EQUAL 0)
			message(WARNING "Failed to create symbolic link from ${DATA_LINK_PATH} to ${DATA_SOURCE_PATH}")
		else()
			message(STATUS "Created symbolic link: ${DATA_LINK_PATH} -> ${DATA_SOURCE_PATH}")
		endif()
	endif()
endif()

# Any additional paths needed should either be under /src or add a new one for any additional paths that's not under /src
file(GLOB_RECURSE PROJECT_SOURCE_C
     "${CMAKE_CURRENT_SOURCE_DIR}/src/main.c"
)

# Source code for your game.
add_executable(
	${PROJECT_NAME}
	${PROJECT_SOURCE_C}
)

# Our source code will be in the `src` folder.
target_include_directories(${PROJECT_NAME} PUBLIC 
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src/libs/empyreanx>
)

if (NOT CF_RUNTIME_SHADER_COMPILATION)
	add_custom_command(
		OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/src/game/tunnel_color_shd.h
		COMMAND cute-shaderc
		-I${CMAKE_CURRENT_SOURCE_DIR}/data/shaders
		-type=draw
		-varname=s_tunnel_color_shd_bytecode
		-oheader=${CMAKE_CURRENT_SOURCE_DIR}/src/game/tunnel_color_shd.h
		${CMAKE_CURRENT_SOURCE_DIR}/data/shaders/tunnel_color.shd
		DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/data/shaders/tunnel_color.shd
		DEPENDS cute-shaderc
	)
endif()

# Support for web builds through the Emscripten compiler.
if(EMSCRIPTEN)
	add_custom_target(copy-emscripten-shell
		COMMAND ${CMAKE_COMMAND} -E copy_directory_if_different ${CMAKE_CURRENT_SOURCE_DIR}/emscripten ${CMAKE_BINARY_DIR}/emscripten
	)
	add_library(cute-emscripten-shell INTERFACE)
	add_dependencies(cute-emscripten-shell copy-emscripten-shell)
	target_link_options(cute-emscripten-shell INTERFACE --shell-file "${CMAKE_CURRENT_SOURCE_DIR}/emscripten/shell.html")

	set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "${PROJECT_NAME}" SUFFIX ".html")
	target_compile_options(${PROJECT_NAME} PRIVATE -O1 -fno-rtti -fno-exceptions -gsplit-dwarf)
	target_link_options(${PROJECT_NAME} PRIVATE -o ${PROJECT_NAME}.html -sASYNCIFY=1 -O1 -gseparate-dwarf)
	target_link_libraries(${PROJECT_NAME} PRIVATE cute-emscripten-shell)

	target_link_options(${PROJECT_NAME} PRIVATE --preload-file "${CMAKE_CURRENT_SOURCE_DIR}/data@/data")
endif()

# Some basic information needed for CMake to generate your Info.plist file.
# This is necessary for e.g. iOS builds.
if(APPLE)
	set_target_properties(${PROJECT_NAME} PROPERTIES
		MACOSX_BUNDLE_GUI_IDENTIFIER "com.${PROJECT_NAME}.${PROJECT_NAME}"
		MACOSX_BUNDLE_BUNDLE_VERSION "1.0.0"
		MACOSX_BUNDLE_SHORT_VERSION_STRING "1.0.0"
	)
endif()

# Make the game link against Cute Framework.
target_link_libraries(${PROJECT_NAME} PRIVATE cute)

# For convenience on Windows, set MSVC debugger's working directory in the build folder.
# Also ask MSVC to make the game the startup project.
if (MSVC)
	set_property(TARGET ${PROJECT_NAME} PROPERTY VS_DEBUGGER_WORKING_DIRECTORY $<TARGET_FILE_DIR:${PROJECT_NAME}>)
	set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
endif()

add_link_options(
    /LARGEADDRESSAWARE
    /DEBUG
    $<$<NOT:$<CONFIG:DEBUG>>:/INCREMENTAL:NO> # Disable incremental linking.
)
